# slidetown-gui

./: Cargo.toml
.github/workflows/: ci.yml
crates/nif-wgpu/: Cargo.toml
crates/nif-wgpu-egui/: Cargo.toml
crates/nif-wgpu/src/: camera.rs  collector.rs  lib.rs  light.rs  renderer.rs
crates/nif-wgpu/src/pipelines/opaque/: instance.rs  mesh.rs  mod.rs  opaque.wgsl  vertex.rs
examples/nif-viewer/: Cargo.toml
examples/nif-viewer/src/: main.rs
src/: app.rs  main.rs  project.rs  storage.rs
src/dialogs/: mod.rs  new_project.rs  project.rs
src/dialogs/files/: lbf.rs  levelmodifier.rs  lf.rs  mod.rs  nif.rs  vehicles.rs  world.rs
src/widgets/: mod.rs
src/widgets/nif/: camera.rs  light.rs  mod.rs  nif_render_resources.rs  texture.rs  untextured_mesh.rs  untextured_mesh.wgsl  untextured_mesh_pipeline.rs
src/windows/: agt.rs  levelmodifier.rs  loi.rs  mod.rs
