[package]
name = "slidetown-gui"
version = "0.1.0"
authors = ["amPerl"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
camino = { version = "1.0.9", features = ["serde1"] }
eframe = { git = "https://github.com/amPerl/egui", branch = "feature/wgpu-depth-texture", default-features = false, features = ["default_fonts", "persistence", "wgpu"] }
native-dialog = "0.6.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
slidetown = { git = "https://github.com/amPerl/slidetown" }
nif = { git = "https://github.com/amPerl/nif" }
bytemuck = "1.12.1"
glam = { version = "0.21.3", features = ["bytemuck"] }
egui-gizmo = { git = "https://github.com/amPerl/egui-gizmo", branch = "egui-fork" }
dolly = { git = "https://github.com/amPerl/dolly", branch = "z-up" }

[features]
